Splitting up Authentication and YouTrack endpoints

--- a/src/main/resources/fx/views/settings.fxml
+++ b/src/main/resources/fx/views/settings.fxml
@@ -1,74 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
 <?import javafx.geometry.*?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+<?import javafx.scene.text.*?>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0"
+            prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="de.pbauerochse.worklogviewer.fx.SettingsViewController">
 
     <center>
         <Accordion maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
             <expandedPane>
                 <TitledPane fx:id="authenticationPane" text="%view.settings.authentication">
-                    <content>
-                        <GridPane hgap="5.0" BorderPane.alignment="TOP_LEFT">
-                            <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0"/>
-                                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
-                            </columnConstraints>
-                            <rowConstraints>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
-                                <RowConstraints/>
-                            </rowConstraints>
-                            <children>
-                                <Hyperlink onAction="#showSettingsHelp" text="%view.settings.authentication.help"
-                                           GridPane.columnIndex="1"/>
+                    <GridPane hgap="5.0" vgap="2.0" BorderPane.alignment="TOP_LEFT">
+                        <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0"/>
+                            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
+                        </columnConstraints>
+                        <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+                            <RowConstraints minHeight="10.0" valignment="TOP" vgrow="NEVER"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+                        </rowConstraints>
+                        <padding>
+                            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                        </padding>
+                        <Hyperlink onAction="#showSettingsHelp" text="%view.settings.authentication.help"
+                                   GridPane.columnIndex="1"/>
 
-                                <Label text="%view.settings.youtrackurl" GridPane.rowIndex="1"/>
-                                <TextField fx:id="youtrackUrlField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                        <Label text="%view.settings.youtrackurl" GridPane.rowIndex="1"/>
+                        <TextField fx:id="youtrackUrlField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
 
-                                <Label text="%view.settings.youtrackauthenticationmethod" GridPane.rowIndex="2"/>
-                                <ComboBox fx:id="youtrackAuthenticationMethodField" maxWidth="1.7976931348623157E308"
-                                          GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                        <Label text="%view.settings.youtrackversion" GridPane.rowIndex="2">
+                            <GridPane.margin>
+                                <Insets top="3.0"/>
+                            </GridPane.margin>
+                        </Label>
+                        <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                            <ComboBox fx:id="youtrackVersionField" maxWidth="1.7976931348623157E308"/>
+                            <Text fx:id="youtrackVersionRequiredLabel" fill="#c91414" strokeType="OUTSIDE"
+                                  strokeWidth="0.0" text="%view.settings.requiredfield">
+                                <VBox.margin>
+                                    <Insets bottom="3.0" top="3.0"/>
+                                </VBox.margin>
+                            </Text>
+                        </VBox>
 
-                                <Label text="%view.settings.youtrackuser" GridPane.rowIndex="3"/>
-                                <TextField fx:id="youtrackUsernameField" GridPane.columnIndex="1"
-                                           GridPane.rowIndex="3"/>
+                        <Label text="%view.settings.youtrackauthenticationmethod" GridPane.rowIndex="3"/>
+                        <ComboBox fx:id="youtrackAuthenticationMethodField" maxWidth="1.7976931348623157E308"
+                                  GridPane.columnIndex="1" GridPane.rowIndex="3"/>
 
-                                <Label text="%view.settings.youtrackpassword" GridPane.rowIndex="4"/>
-                                <PasswordField fx:id="youtrackPasswordField" GridPane.columnIndex="1"
-                                               GridPane.rowIndex="4"/>
+                        <Label text="%view.settings.youtrackuser" GridPane.rowIndex="4"/>
+                        <TextField fx:id="youtrackUsernameField" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
 
-                                <Label text="%view.settings.youtrackoauthhuburl" GridPane.rowIndex="5"/>
-                                <TextField fx:id="youtrackOAuthHubUrlField" GridPane.columnIndex="1"
-                                           GridPane.rowIndex="5"/>
+                        <Label text="%view.settings.youtrackpassword" GridPane.rowIndex="5"/>
+                        <PasswordField fx:id="youtrackPasswordField" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
 
-                                <Label text="%view.settings.youtrackoauthserviceid" GridPane.rowIndex="6"/>
-                                <TextField fx:id="youtrackOAuthServiceIdField" GridPane.columnIndex="1"
-                                           GridPane.rowIndex="6"/>
+                        <Label text="%view.settings.youtrackoauthhuburl" GridPane.rowIndex="6"/>
+                        <TextField fx:id="youtrackOAuthHubUrlField" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
 
-                                <Label text="%view.settings.youtrackoauthservicesecret" GridPane.rowIndex="7"/>
-                                <PasswordField fx:id="youtrackOAuthServiceSecretField" GridPane.columnIndex="1"
-                                               GridPane.rowIndex="7"/>
+                        <Label text="%view.settings.youtrackoauthserviceid" GridPane.rowIndex="7"/>
+                        <TextField fx:id="youtrackOAuthServiceIdField" GridPane.columnIndex="1" GridPane.rowIndex="7"/>
 
-                            </children>
-                            <padding>
-                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-                            </padding>
-                        </GridPane>
-                    </content>
+                        <Label text="%view.settings.youtrackoauthservicesecret" GridPane.rowIndex="8"/>
+                        <PasswordField fx:id="youtrackOAuthServiceSecretField" GridPane.columnIndex="1"
+                                       GridPane.rowIndex="8"/>
+
+                        <Label text="%view.settings.youtrackpermanenttoken" GridPane.rowIndex="9"/>
+                        <PasswordField fx:id="youtrackPermanentTokenField" GridPane.columnIndex="1"
+                                       GridPane.rowIndex="9"/>
+
+                    </GridPane>
                 </TitledPane>
             </expandedPane>
             <panes>
@@ -150,56 +159,70 @@
                                         <Font name="System Bold" size="13.0"/>
                                     </font>
                                 </Label>
-                                <CheckBox fx:id="mondayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                                <CheckBox fx:id="mondayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                                <CheckBox fx:id="mondayCollapseCheckbox" mnemonicParsing="false"
+                                          GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                                <CheckBox fx:id="mondayHighlightCheckbox" mnemonicParsing="false"
+                                          GridPane.columnIndex="1" GridPane.rowIndex="2"/>
 
                                 <Label text="%view.settings.workdays.tuesday" GridPane.columnIndex="2">
                                     <font>
                                         <Font name="System Bold" size="13.0"/>
                                     </font>
                                 </Label>
-                                <CheckBox fx:id="tuesdayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
-                                <CheckBox fx:id="tuesdayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
+                                <CheckBox fx:id="tuesdayCollapseCheckbox" mnemonicParsing="false"
+                                          GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+                                <CheckBox fx:id="tuesdayHighlightCheckbox" mnemonicParsing="false"
+                                          GridPane.columnIndex="2" GridPane.rowIndex="2"/>
 
                                 <Label text="%view.settings.workdays.wednesday" GridPane.columnIndex="3">
                                     <font>
                                         <Font name="System Bold" size="13.0"/>
                                     </font>
                                 </Label>
-                                <CheckBox fx:id="wednesdayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
-                                <CheckBox fx:id="wednesdayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="3" GridPane.rowIndex="2"/>
+                                <CheckBox fx:id="wednesdayCollapseCheckbox" mnemonicParsing="false"
+                                          GridPane.columnIndex="3" GridPane.rowIndex="1"/>
+                                <CheckBox fx:id="wednesdayHighlightCheckbox" mnemonicParsing="false"
+                                          GridPane.columnIndex="3" GridPane.rowIndex="2"/>
 
                                 <Label text="%view.settings.workdays.thursday" GridPane.columnIndex="4">
                                     <font>
                                         <Font name="System Bold" size="13.0"/>
                                     </font>
                                 </Label>
-                                <CheckBox fx:id="thursdayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="4" GridPane.rowIndex="1"/>
-                                <CheckBox fx:id="thursdayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="4" GridPane.rowIndex="2"/>
+                                <CheckBox fx:id="thursdayCollapseCheckbox" mnemonicParsing="false"
+                                          GridPane.columnIndex="4" GridPane.rowIndex="1"/>
+                                <CheckBox fx:id="thursdayHighlightCheckbox" mnemonicParsing="false"
+                                          GridPane.columnIndex="4" GridPane.rowIndex="2"/>
 
                                 <Label text="%view.settings.workdays.friday" GridPane.columnIndex="5">
                                     <font>
                                         <Font name="System Bold" size="13.0"/>
                                     </font>
                                 </Label>
-                                <CheckBox fx:id="fridayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="5" GridPane.rowIndex="1"/>
-                                <CheckBox fx:id="fridayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="5" GridPane.rowIndex="2"/>
+                                <CheckBox fx:id="fridayCollapseCheckbox" mnemonicParsing="false"
+                                          GridPane.columnIndex="5" GridPane.rowIndex="1"/>
+                                <CheckBox fx:id="fridayHighlightCheckbox" mnemonicParsing="false"
+                                          GridPane.columnIndex="5" GridPane.rowIndex="2"/>
 
                                 <Label text="%view.settings.workdays.saturday" GridPane.columnIndex="6">
                                     <font>
                                         <Font name="System Bold" size="13.0"/>
                                     </font>
                                 </Label>
-                                <CheckBox fx:id="saturdayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="6" GridPane.rowIndex="1"/>
-                                <CheckBox fx:id="saturdayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="6" GridPane.rowIndex="2"/>
+                                <CheckBox fx:id="saturdayCollapseCheckbox" mnemonicParsing="false"
+                                          GridPane.columnIndex="6" GridPane.rowIndex="1"/>
+                                <CheckBox fx:id="saturdayHighlightCheckbox" mnemonicParsing="false"
+                                          GridPane.columnIndex="6" GridPane.rowIndex="2"/>
 
                                 <Label text="%view.settings.workdays.sunday" GridPane.columnIndex="7">
                                     <font>
                                         <Font name="System Bold" size="13.0"/>
                                     </font>
                                 </Label>
-                                <CheckBox fx:id="sundayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="7" GridPane.rowIndex="1"/>
-                                <CheckBox fx:id="sundayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="7" GridPane.rowIndex="2"/>
+                                <CheckBox fx:id="sundayCollapseCheckbox" mnemonicParsing="false"
+                                          GridPane.columnIndex="7" GridPane.rowIndex="1"/>
+                                <CheckBox fx:id="sundayHighlightCheckbox" mnemonicParsing="false"
+                                          GridPane.columnIndex="7" GridPane.rowIndex="2"/>
                             </children>
                             <padding>
                                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
