--- a/src/main/resources/fx/views/settings.fxml
+++ b/src/main/resources/fx/views/settings.fxml
@@ -50,23 +50,23 @@
                         <ComboBox fx:id="youtrackAuthenticationMethodField" maxWidth="1.7976931348623157E308"
                                   GridPane.columnIndex="1" GridPane.rowIndex="3"/>
 
-                        <Label text="%view.settings.youtrackuser" GridPane.rowIndex="4"/>
+                        <Label fx:id="youtrackUsernameLabel" text="%view.settings.youtrackuser" GridPane.rowIndex="4"/>
                         <TextField fx:id="youtrackUsernameField" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
 
-                        <Label text="%view.settings.youtrackpassword" GridPane.rowIndex="5"/>
+                        <Label fx:id="youtrackPasswordLabel" text="%view.settings.youtrackpassword" GridPane.rowIndex="5"/>
                         <PasswordField fx:id="youtrackPasswordField" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
 
-                        <Label text="%view.settings.youtrackoauthhuburl" GridPane.rowIndex="6"/>
+                        <Label fx:id="youtrackOAuthHubUrlLabel" text="%view.settings.youtrackoauthhuburl" GridPane.rowIndex="6"/>
                         <TextField fx:id="youtrackOAuthHubUrlField" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
 
-                        <Label text="%view.settings.youtrackoauthserviceid" GridPane.rowIndex="7"/>
+                        <Label fx:id="youtrackOAuthServiceIdLabel" text="%view.settings.youtrackoauthserviceid" GridPane.rowIndex="7"/>
                         <TextField fx:id="youtrackOAuthServiceIdField" GridPane.columnIndex="1" GridPane.rowIndex="7"/>
 
-                        <Label text="%view.settings.youtrackoauthservicesecret" GridPane.rowIndex="8"/>
+                        <Label fx:id="youtrackOAuthServiceSecretLabel" text="%view.settings.youtrackoauthservicesecret" GridPane.rowIndex="8"/>
                         <PasswordField fx:id="youtrackOAuthServiceSecretField" GridPane.columnIndex="1"
                                        GridPane.rowIndex="8"/>
 
-                        <Label text="%view.settings.youtrackpermanenttoken" GridPane.rowIndex="9"/>
+                        <Label fx:id="youtrackPermanentTokenLabel" text="%view.settings.youtrackpermanenttoken" GridPane.rowIndex="9"/>
                         <PasswordField fx:id="youtrackPermanentTokenField" GridPane.columnIndex="1"
                                        GridPane.rowIndex="9"/>
 
