--- a/src/main/resources/fx/views/settings.fxml
+++ b/src/main/resources/fx/views/settings.fxml
@@ -29,9 +29,19 @@
                         </rowConstraints>
                         <padding><Insets bottom="10.0" left="10.0" right="10.0" top="10.0" /></padding>
 
-                        <Hyperlink onAction="#showSettingsHelp" text="%view.settings.authentication.help" GridPane.columnIndex="1">
-                            <GridPane.margin><Insets bottom="5" /></GridPane.margin>
-                        </Hyperlink>
+                        <HBox alignment="CENTER_LEFT" spacing="10.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS"
+                              GridPane.rowIndex="0">
+                            <Label text="%view.settings.allfields">
+                                <font>
+                                    <Font name="System Bold" size="13.0"/>
+                                </font>
+                            </Label>
+                            <Hyperlink onAction="#showSettingsHelp" text="%view.settings.authentication.help"/>
+
+                            <GridPane.margin>
+                                <Insets bottom="10"/>
+                            </GridPane.margin>
+                        </HBox>
 
                         <Label text="%view.settings.youtrackurl" GridPane.rowIndex="1" />
                         <TextField fx:id="youtrackUrlField" GridPane.columnIndex="1" GridPane.rowIndex="1">
