--- a/src/main/resources/fx/views/main.fxml
+++ b/src/main/resources/fx/views/main.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.pbauerochse.worklogviewer.fx.tabs.TimeReportResultTabbedPane?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
@@ -63,7 +64,7 @@
                                 </Button>
                             </items>
                         </ToolBar>
-                        <TabPane fx:id="resultTabPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER" VBox.vgrow="ALWAYS" />
+                        <TimeReportResultTabbedPane fx:id="resultTabPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER" VBox.vgrow="ALWAYS" />
                     </children>
                 </VBox>
                 <StackPane fx:id="waitScreenOverlay" style="-fx-background-color: rgba(0, 0, 0, 0.5);" visible="false">
